[gd_scene load_steps=2 format=3 uid="uid://br7v17k6g4qhd"]

[ext_resource type="Script" path="res://scripts/steam_menu.gd" id="1_d3hha"]

[node name="SteamMenu" type="Node2D"]
script = ExtResource("1_d3hha")

[node name="SteamMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 50.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartGame" type="Button" parent="SteamMenu"]
visible = false
layout_mode = 2
offset_top = 70.0
offset_right = 96.0
offset_bottom = 101.0
text = "Start Game"

[node name="Panel" type="Panel" parent="SteamMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -4.0
offset_bottom = 18.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="SteamMenu/Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Host" type="Button" parent="SteamMenu/Panel/VBoxContainer"]
layout_mode = 2
text = "Host"

[node name="Join" type="Button" parent="SteamMenu/Panel/VBoxContainer"]
layout_mode = 2
text = "Join"

[connection signal="pressed" from="SteamMenu/StartGame" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="SteamMenu/Panel/VBoxContainer/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="SteamMenu/Panel/VBoxContainer/Join" to="." method="_on_join_pressed"]
